added some styling

--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
 	</div>
 </div>
 
+<div id="win">
+</div>
 
+<div id="info">
+	<h2>Rules & Tips</h2>
+	<ul>
+		<li>Arrange the numbers so that each row, column and diagonal sums are equal.</li>
+		<li>Click 2 differnt boxes to swap numbers.</li>
+		<li>Click the same box twice to highligh.</li>
+	</ul>
+</div>
 </body>
 </html>
